samples/_failures_safe/1761663493_4e377c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca1f760e.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_ca1f760e.c:176:14: error: ‘TOKEN_’ undeclared (first use in this function)
  176 |         case TOKEN_
      |              ^~~~~~
./samples/SAFE/__tmp_ca1f760e.c:176:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ca1f760e.c:176:9: error: expected ‘:’ or ‘...’ at end of input
  176 |         case TOKEN_
      |         ^~~~
./samples/SAFE/__tmp_ca1f760e.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ca1f760e.c:176:9: error: expected declaration or statement at end of input
